# GameTwo

./: .gitignore  .gitmodules  CMakeLists.txt  exec.sh
assets/configs/: mob.toml  player.toml  tiles.toml  xp.toml
assets/configs/monsters/: fire_skull.toml
assets/configs/weapons/: bow.toml  sword.toml
assets/maps/: basic.txt
include/: Game.hpp  NetworkMenu.hpp  NetworkMode.hpp  configs.hpp  entities.hpp  mobs.hpp  player.hpp  weapons.hpp
include/Game/: components.hpp  signals.hpp  systems.hpp
include/Game/components/: collectible.hpp  mob.hpp  spawner.hpp  weapons.hpp  xp.hpp
include/components/: mob.hpp  spawner.hpp
src/: main.cpp  player.cpp
src/Game/: Game.cpp  mob_spawner.cpp  player.cpp
src/Game/components/: collectible.cpp  mob.cpp  spawner.cpp  weapons.cpp  xp.cpp
src/Game/signals/: entity_death.cpp  player_mov.cpp
src/Game/systems/: collect.cpp  mob_looking_direction.cpp  mob_mov.cpp  mob_spawner.cpp  player_weapon.cpp  upgrade_player.cpp
src/weapons/: bow.cpp  sword.cpp
